# wow-optimize

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat
cmake/: toolchain-clang-msvc-x86.cmake
src/: addon_dispatcher.cpp  addon_dispatcher.h  addon_preload.cpp  addon_preload.h  aligned_alloc_cache.cpp  aligned_alloc_cache.h  anim_mt.cpp  anim_mt.h  api_cache.cpp  api_cache.h  batch_opt_40.cpp  cache_governor.cpp  cache_governor.h  cdatastore_batch.cpp  cdatastore_batch.h  combatlog_buffer.cpp  combatlog_buffer.h  combatlog_mt.cpp  combatlog_mt.h  combatlog_optimize.cpp  combatlog_optimize.h  compute_caches.cpp  compute_caches.h  crash_dumper.cpp  crash_dumper.h  crt_char_fast.cpp  crt_char_fast.h  crt_free_hook.cpp  crt_free_hook.h  crt_mem_fastpath.cpp  crt_memcpy_fast.cpp  crt_memcpy_fast.h  crt_pow_sse2.cpp  crt_pow_sse2.h  crt_string_fast.h  crt_wchar_fast.cpp  crt_wchar_fast.h  cvar_null_guard.cpp  cvar_null_guard.h  cvar_watchdog.cpp  (+317 more)
src/allocators/: aligned_alloc_cache.cpp  aligned_alloc_cache.h  cache_governor.cpp  cache_governor.h  crt_free_hook.cpp  crt_free_hook.h  frame_arena.cpp  frame_arena.h  heap_compactor.cpp  heap_compactor.h  loading_defrag.cpp  loading_defrag.h  lua_alloc_pool.cpp  lua_alloc_pool.h  memory_pressure_governor.cpp  memory_pressure_governor.h  texcache_tuning.cpp  texcache_tuning.h
src/core/: config.cpp  config.h  dllmain.cpp  version.h  version.rc  version_checker.cpp  version_checker.h  version_proxy.cpp  win_mutex.h  wow_loader.cpp
src/diagnostics/: crash_dumper.cpp  crash_dumper.h  cvar_watchdog.cpp  cvar_watchdog.h  perf_diagnostics.cpp  perf_diagnostics.h  sampling_profiler.cpp  sampling_profiler.h
src/hooks_subsystems/: adaptive_farclip.cpp  adaptive_farclip.h  addon_msg_limiter.cpp  addon_msg_limiter.h  addon_preload.cpp  addon_preload.h  anim_blend_cache.cpp  anim_blend_cache.h  api_cache.cpp  api_cache.h  async_culling.cpp  async_culling.h  async_sound_loader.cpp  async_sound_loader.h  async_terrain_loader.cpp  async_terrain_loader.h  async_tex_loader.cpp  async_tex_loader.h  aura_preload_cache.cpp  aura_preload_cache.h  aura_update_dedup.cpp  aura_update_dedup.h  batch_opt_40.cpp  camera_collision_throttle.cpp  camera_collision_throttle.h  camera_shake_opt.cpp  camera_shake_opt.h  cdatastore_batch.cpp  cdatastore_batch.h  cdatastore_buffering.cpp  cdatastore_buffering.h  combat_event_limit.cpp  combat_event_limit.h  combat_log_async.cpp  combat_log_async.h  combat_log_filter.cpp  combat_log_filter.h  combat_text_coalescer.cpp  combat_text_coalescer.h  combat_text_font.cpp  (+250 more)
src/launcher/: Launcher.cs
src/runtime_vm/: addon_tick_governor.cpp  addon_tick_governor.h  combatlog_parser.cpp  combatlog_parser.h  luaS_newlstr_sse2.cpp  luaS_newlstr_sse2.h  lua_addlstring_fast.cpp  lua_addlstring_fast.h  lua_argcheck_fast.cpp  lua_argcheck_fast.h  lua_buffinit_fast.cpp  lua_buffinit_fast.h  lua_bytecode_cache.cpp  lua_bytecode_cache.h  lua_bytecode_pre_compiler.cpp  lua_bytecode_pre_compiler.h  lua_callmeta_fast.cpp  lua_callmeta_fast.h  lua_checknumber_cache.cpp  lua_checknumber_cache.h  lua_checknumber_fast.cpp  lua_checknumber_fast.h  lua_checkstring_fast.cpp  lua_checkstring_fast.h  lua_checktype_fast.cpp  lua_checktype_fast.h  lua_concat_fast.cpp  lua_concat_fast.h  lua_createtable_fast.cpp  lua_createtable_fast.h  lua_error_diag.cpp  lua_error_diag.h  lua_error_fast.cpp  lua_error_fast.h  lua_fastpath.cpp  lua_fastpath.h  lua_file_cache.cpp  lua_file_cache.h  lua_gc_fast.cpp  lua_gc_fast.h  (+134 more)
src/simd_math/: hooks_simd.cpp  hooks_simd.h  m2_bone_simd.cpp  m2_bone_simd.h  m2_lod_bias.cpp  m2_lod_bias.h  matrix_copy_sse2.cpp  matrix_copy_sse2.h  network_guid_sse2.cpp  network_guid_sse2.h  parallel_m2_skinning.cpp  parallel_m2_skinning.h  simd_math_fast.cpp  simd_math_fast.h  simd_skinning.cpp  simd_skinning.h  trig_lut.cpp  trig_lut.h  world_to_screen_sse.cpp  world_to_screen_sse.h
src/threading/: addon_dispatcher.cpp  addon_dispatcher.h  lock_tuning.cpp  lock_tuning.h
